tests/core/invalid/free-type-variable/input.core
(core 2
  (types)
  (defs
    (def example::bad (var T) (int 0))))
